include/altdss/capi/dss.h

    /*! 
    Array of strings. Get  Bus definitions to which each terminal is connected. 0-based array.

    The `removeNodes` argument is an **API Extension**. Use it to get only the bus names, 
    without the connection/node specification, if present.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_BusNames(char*** ResultPtr, int32_t* ResultDims, uint16_t removeNodes);
    /*! 
    Full Name of Active Circuit Element
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_Name(void);
    /*! 
    Number of Conductors per Terminal
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumConductors(void);
    /*! 
    Number of Phases
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumPhases(void);
    /*! 
    Number of Terminals this Circuit Element
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumTerminals(void);
    /*! 
    Array of strings. Set Bus definitions for each terminal is connected.
    */
    ALTDSS_CAPI_DLL void CktElement_Set_BusNames(const char** ValuePtr, int32_t ValueCount);
    /*! 
    Complex array of currents into each conductor of each terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Currents(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Currents but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Currents_GR(void);
    /*! 
    Complex array of voltages at terminals
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Voltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Voltages but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Voltages_GR(void);
    /*! 
    Emergency Ampere Rating for PD elements
    */
    ALTDSS_CAPI_DLL double CktElement_Get_EmergAmps(void);
    /*! 
    Boolean indicating that element is currently in the circuit.
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_Enabled(void);
    /*! 
    Total losses in the element: two-element double array (complex), in VA (watts, vars)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Losses(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Losses but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Losses_GR(void);
    /*! 
    Normal ampere rating for PD Elements
    */
    ALTDSS_CAPI_DLL double CktElement_Get_NormalAmps(void);
    /*! 
    Complex array of losses (kVA) by phase
    */
    ALTDSS_CAPI_DLL void CktElement_Get_PhaseLosses(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_PhaseLosses but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_PhaseLosses_GR(void);
    /*! 
    Complex array of powers (kVA) into each conductor of each terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Powers(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Powers but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Powers_GR(void);
    /*! 
    Double array of symmetrical component currents (magnitudes only) into each 3-phase terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqCurrents(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_SeqCurrents but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqCurrents_GR(void);
    /*! 
    Complex array of sequence powers (kW, kvar) into each 3-phase terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqPowers(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_SeqPowers but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqPowers_GR(void);
    /*! 
    Double array of symmetrical component voltages (magnitudes only) at each 3-phase terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_SeqVoltages but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqVoltages_GR(void);
    ALTDSS_CAPI_DLL void CktElement_Close(int32_t Term, int32_t Phs);
    ALTDSS_CAPI_DLL void CktElement_Open(int32_t Term, int32_t Phs);
    /*! 
    Emergency Ampere Rating
    */
    ALTDSS_CAPI_DLL void CktElement_Set_EmergAmps(double Value);
    /*! 
    Boolean indicating that element is currently in the circuit.
    */
    ALTDSS_CAPI_DLL void CktElement_Set_Enabled(uint16_t Value);
    /*! 
    Normal ampere rating
    */
    ALTDSS_CAPI_DLL void CktElement_Set_NormalAmps(double Value);
    ALTDSS_CAPI_DLL uint16_t CktElement_IsOpen(int32_t Term, int32_t Phs);
    /*! 
    Array containing all property names of the active device.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllPropertyNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Number of Properties this Circuit Element.
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumProperties(void);
    /*! 
    Residual currents for each terminal: (magnitude, angle in degrees)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Residuals(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Residuals but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Residuals_GR(void);
    /*! 
    YPrim matrix, column order, complex numbers (paired)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Yprim(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Yprim but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Yprim_GR(void);
    /*! 
    Display name of the object (not necessarily unique)
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_DisplayName(void);
    /*! 
    globally unique identifier for this object
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_GUID(void);
    /*! 
    Pointer to this object
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_Handle(void);
    /*! 
    Display name of the object (not necessarily unique)
    */
    ALTDSS_CAPI_DLL void CktElement_Set_DisplayName(const char* Value);
    /*! 
    Full name of the i-th controller attached to this element. Ex: str = Controller(2).  See NumControls to determine valid index range
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_Controller(int32_t idx);
    /*! 
    Name of the Energy Meter this element is assigned to.
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_EnergyMeter(void);
    /*! 
    This element has a CapControl or RegControl attached.
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_HasVoltControl(void);
    /*! 
    This element has a SwtControl attached.
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_HasSwitchControl(void);
    /*! 
    Complex double array of Sequence Voltage for all terminals of active circuit element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_CplxSeqVoltages but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqVoltages_GR(void);
    /*! 
    Complex double array of Sequence Currents for all conductors of all terminals of active circuit element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqCurrents(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_CplxSeqCurrents but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqCurrents_GR(void);
    /*! 
    Array of strings listing all the published variable names, if a PCElement. Otherwise, null string.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllVariableNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Array of doubles. Values of state variables of active element if PC element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllVariableValues(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_AllVariableValues but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllVariableValues_GR(void);
    /*! 
    For PCElement, set/get the value of a variable by name. If Code>0 Then no variable by this name or not a PCelement.
    */
    ALTDSS_CAPI_DLL double CktElement_Get_Variable(const char* MyVarName, int32_t *Code);
    ALTDSS_CAPI_DLL void CktElement_Set_Variable(const char* MyVarName, int32_t *Code, double Value);
    /*! 
    For PCElement, set/get the value of a variable by integer index.
    */
    ALTDSS_CAPI_DLL double CktElement_Get_Variablei(int32_t Idx, int32_t *Code);
    ALTDSS_CAPI_DLL void CktElement_Set_Variablei(int32_t Idx, int32_t *Code, double Value);
    /*! 
    Array of integer containing the node numbers (representing phases, for example) for each conductor of each terminal.
    Be sure to run a solution to initialize the values after the circuit is created or modified.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeOrder(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_NodeOrder but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeOrder_GR(void);
    /*! 
    True if a recloser, relay, or fuse controlling this ckt element. OCP = Overcurrent Protection
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_HasOCPDevice(void);
    /*! 
    Number of controls connected to this device. Use to determine valid range for index into Controller array.
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumControls(void);
    /*! 
    Index into Controller list of OCP Device controlling this CktElement
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_OCPDevIndex(void);
    /*! 
    0=None; 1=Fuse; 2=Recloser; 3=Relay;  Type of OCP controller device
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_OCPDevType(void);
    /*! 
    Currents in magnitude, angle (degrees) format as a array of doubles.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CurrentsMagAng(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_CurrentsMagAng but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CurrentsMagAng_GR(void);
    /*! 
    Voltages at each conductor in magnitude, angle form as array of doubles.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_VoltagesMagAng(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_VoltagesMagAng but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_VoltagesMagAng_GR(void);
    /*! 
    Returns true if the current active element is isolated.
    Note that this only fetches the current value. See also the Topology interface.

    (API Extension)
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_IsIsolated(void);
    /*! 
    Returns an array with the total powers (complex, kVA) at ALL terminals of the active circuit element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_TotalPowers(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_TotalPowers but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_TotalPowers_GR(void);
    /*! 
    Gets the name of the active state variable if any, otherwise, returns and empty string
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_VariableName(void);
    /*!
    Sets the name of the active state variable for using with the VariableValue property
    */
    ALTDSS_CAPI_DLL void CktElement_Set_VariableName(const char* Value);
    
    /*!
    Gets the  present value for the active state variable. If there no active variable, returns a error message.
    */
    ALTDSS_CAPI_DLL double CktElement_Get_VariableValue(void);
    
    /*!
    Sets the given value to be the present value for the active state variable. If there no active variable, returns a error message.
    */
    ALTDSS_CAPI_DLL void CktElement_Set_VariableValue(double Value);
    /*!
    Gets the index of the active state variable if any, otherwise, returns -1
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_VariableIdx(void);
    /*!
    Activates a  state variable by index for using with the VariableValue property
    */
    ALTDSS_CAPI_DLL void CktElement_Set_VariableIdx(int32_t Value);
    /*! 
    Array of integers, a copy of the internal NodeRef of the CktElement.
    
    (API Extension)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeRef(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_NodeRef but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeRef_GR(void);
    ALTDSS_CAPI_DLL void* CktElement_Get_Pointer(void);