src/CAPI/CAPI_CktElement.pas

unit CAPI_CktElement;

interface

uses
    CAPI_Utils,
    CktElement,
    CAPI_Types;

procedure CktElement_Get_BusNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_BusNames_GR(); CDECL;
function CktElement_Get_Name(): PAnsiChar; CDECL;
function CktElement_Get_NumConductors(): Integer; CDECL;
function CktElement_Get_NumPhases(): Integer; CDECL;
function CktElement_Get_NumTerminals(): Integer; CDECL;
procedure CktElement_Set_BusNames(ValuePtr: PPAnsiChar; ValueCount: TAPISize); CDECL;
procedure CktElement_Get_Currents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_Currents_GR(); CDECL;
procedure CktElement_Get_Voltages(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_Voltages_GR(); CDECL;
function CktElement_Get_EmergAmps(): Double; CDECL;
function CktElement_Get_Enabled(): TAPIBoolean; CDECL;
procedure CktElement_Get_Losses(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_Losses_GR(); CDECL;
function CktElement_Get_NormalAmps(): Double; CDECL;
procedure CktElement_Get_PhaseLosses(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_PhaseLosses_GR(); CDECL;
procedure CktElement_Get_Powers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_Powers_GR(); CDECL;
procedure CktElement_Get_SeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_SeqCurrents_GR(); CDECL;
procedure CktElement_Get_SeqPowers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_SeqPowers_GR(); CDECL;
procedure CktElement_Get_SeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_SeqVoltages_GR(); CDECL;
procedure CktElement_Close(Term, Phs: Integer); CDECL;
procedure CktElement_Open(Term, Phs: Integer); CDECL;
procedure CktElement_Set_EmergAmps(Value: Double); CDECL;
procedure CktElement_Set_Enabled(Value: TAPIBoolean); CDECL;
procedure CktElement_Set_NormalAmps(Value: Double); CDECL;
function CktElement_IsOpen(Term, Phs: Integer): TAPIBoolean; CDECL;
procedure CktElement_Get_AllPropertyNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_AllPropertyNames_GR(); CDECL;
function CktElement_Get_NumProperties(): Integer; CDECL;
procedure CktElement_Get_Residuals(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_Residuals_GR(); CDECL;
procedure CktElement_Get_Yprim(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_Yprim_GR(); CDECL;
function CktElement_Get_DisplayName(): PAnsiChar; CDECL;
function CktElement_Get_GUID(): PAnsiChar; CDECL;
function CktElement_Get_Handle(): Integer; CDECL;
procedure CktElement_Set_DisplayName(const Value: PAnsiChar); CDECL;
function CktElement_Get_Controller(idx: Integer): PAnsiChar; CDECL;
function CktElement_Get_EnergyMeter(): PAnsiChar; CDECL;
function CktElement_Get_HasVoltControl(): TAPIBoolean; CDECL;
function CktElement_Get_HasSwitchControl(): TAPIBoolean; CDECL;
procedure CktElement_Get_CplxSeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_CplxSeqVoltages_GR(); CDECL;
procedure CktElement_Get_CplxSeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_CplxSeqCurrents_GR(); CDECL;
procedure CktElement_Get_AllVariableNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_AllVariableNames_GR(); CDECL;
procedure CktElement_Get_AllVariableValues(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_AllVariableValues_GR(); CDECL;
function CktElement_Get_Variable(const VarName: PAnsiChar; out Code: Integer): Double; CDECL;
function CktElement_Get_Variablei(Idx: Integer; out Code: Integer): Double; CDECL;
procedure CktElement_Set_Variable(const VarName: PAnsiChar; out Code: Integer; Value: Double); CDECL;
procedure CktElement_Set_Variablei(Idx: Integer; out Code: Integer; Value: Double); CDECL;
procedure CktElement_Get_NodeOrder(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_NodeOrder_GR(); CDECL;
function CktElement_Get_HasOCPDevice(): TAPIBoolean; CDECL;
function CktElement_Get_NumControls(): Integer; CDECL;
function CktElement_Get_OCPDevIndex(): Integer; CDECL;
function CktElement_Get_OCPDevType(): Integer; CDECL;
procedure CktElement_Get_CurrentsMagAng(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_CurrentsMagAng_GR(); CDECL;
procedure CktElement_Get_VoltagesMagAng(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_VoltagesMagAng_GR(); CDECL;
procedure CktElement_Get_TotalPowers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_TotalPowers_GR(); CDECL;

//
// These are the same as CktElement_Get/Set_Variable and CktElement_Get/Set_Variablei.
//
//function CktElement_Get_VariableByName
//procedure CktElement_Set_VariableByName
//function CktElement_Get_VariableByIndex
//procedure CktElement_Set_VariableByIndex

function CktElement_Get_VariableName(): PAnsiChar; CDECL;
procedure CktElement_Set_VariableName(const Value: PAnsiChar); CDECL;
function CktElement_Get_VariableValue(): Double; CDECL;
procedure CktElement_Set_VariableValue(Value: Double); CDECL;
function CktElement_Get_VariableIdx(): Integer; CDECL;
procedure CktElement_Set_VariableIdx(Value: Integer); CDECL;

// API Extensions
function CktElement_Get_IsIsolated(): TAPIBoolean; CDECL;
procedure CktElement_Get_NodeRef(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;
procedure CktElement_Get_NodeRef_GR(); CDECL;

// API Extensions -- Obj API
function Obj_CktElement_MaxCurrent(obj: TDSSCktElement; terminalIdx: Integer): Double; CDECL;
procedure Obj_Circuit_Set_ActiveCktElement(obj: TDSSCktElement); CDECL;

function CktElement_Get_Pointer(): Pointer; CDECL;

implementation

uses
    CAPI_Constants,
    DSSClassDefs,
    DSSGlobals,
    UComplex, DSSUcomplex,
    Sysutils,
    PDElement,
    PCElement,
    MathUtil,
    Utilities,
    DSSClass,
    DSSHelper,
    Bus,
    Solution;

procedure _CalcSeqCurrents(elem: TDSSCktElement; i012: pComplexArray);
// Assumes V012 is properly allocated before call.
var
    i, j, k, iV: Integer;
    IPh, I012a: Complex3;
    cBuffer: pComplexArray;
    DSS: TDSSContext;
begin
    DSS := elem.DSS;
    if elem.NPhases <> 3 then
    begin
        // Handle non-3 phase elements
        if (elem.Nphases = 1) and DSS.ActiveCircuit.PositiveSequence then
        begin
            cBuffer := Allocmem(sizeof(Complex) * elem.NConds * elem.NTerms);
            elem.GetCurrents(cBuffer);

            for i := 1 to 3 * elem.NTerms do
                i012[i] := 0;   // Initialize Result
            iV := 2;  // pos seq is 2nd element in array
            // Populate only phase 1 quantities in Pos seq
            for j := 1 to elem.NTerms do
            begin
                k := (j - 1) * elem.NConds;
                i012[iV] := cBuffer[1 + k];
                Inc(iV, 3);  // inc to pos seq of next terminal
            end;
            Reallocmem(cBuffer, 0);
        end
        // if neither 3-phase or pos seq model, just put in -1.0 for each element
        else
            for i := 1 to 3 * elem.NTerms do
                i012[i] := -1;  // Signify n/A
    end
    else
    begin    // for 3-phase elements
        iV := 1;
        cBuffer := Allocmem(sizeof(Complex) * elem.NConds * elem.NTerms);
        elem.GetCurrents(cBuffer);
        for j := 1 to elem.NTerms do
        begin
            k := (j - 1) * elem.NConds;
            for i := 1 to 3 do
                Iph[i] := cBuffer[k + i];
            Phase2SymComp(@Iph, @I012a);

            for i := 1 to 3 do
            begin     // Stuff it in the result array
                i012[iV] := i012a[i];
                Inc(iV);
            end;
        end;
        Reallocmem(cBuffer, 0);
    end;
end;

//------------------------------------------------------------------------------
procedure CalcSeqVoltages(elem: TDSSCktElement; V012: pComplexArray);
// Assumes V012 is properly allocated before call.
var
    i, j, k, iV: Integer;
    VPh, V012a: Complex3;
    NodeV: pNodeVArray;
    DSS: TDSSContext;
begin
    DSS := elem.DSS;
    NodeV := DSSPrime.ActiveCircuit.Solution.NodeV;

    if elem.NPhases <> 3 then
    begin
        // Handle non-3 phase elements
        if (elem.Nphases = 1) and DSS.ActiveCircuit.PositiveSequence then
        begin
            for i := 1 to 3 * elem.NTerms do
                V012[i] := 0;   // Initialize Result
            iV := 2;  // pos seq is 2nd element in array
            // Populate only phase 1 quantities in Pos seq
            for j := 1 to elem.NTerms do
            begin
                k := (j - 1) * elem.NConds;
                V012[iV] := NodeV[elem.NodeRef[1 + k]];
                Inc(iV, 3);  // inc to pos seq of next terminal
            end;
        end
        // if neither 3-phase or pos seq model, just put in -1.0 for each element
        else
            for i := 1 to 3 * elem.NTerms do
                V012[i] := -1;  // Signify n/A
    end
    else
    begin    // for 3-phase elements
        iV := 1;
        for j := 1 to elem.NTerms do
        begin
            k := (j - 1) * elem.NConds;
            for i := 1 to 3 do
                Vph[i] := NodeV[elem.NodeRef[i + k]];
            Phase2SymComp(@Vph, @V012a);   // Compute Symmetrical components

            for i := 1 to 3 do
            begin     // Stuff it in the result array
                V012[iV] := V012a[i];
                Inc(iV);
            end;
        end;
    end;
end;

//------------------------------------------------------------------------------
function IsPDElement(elem: TDSSCktElement): Boolean;
begin
    Result := ((elem.DSSObjType and 3) = PD_ELEMENT)
end;
//------------------------------------------------------------------------------
function InvalidCktElement(DSS: TDSSContext; out elem: TDSSCktElement; const NeedsPCElement: Boolean=False): Boolean; inline;
begin
    Result := InvalidCircuit(DSS);
    elem := NIL;
    if Result then
        Exit;
    elem := DSSPrime.ActiveCircuit.ActiveCktElement;
    Result := (elem = NIL);
    if Result and DSS_CAPI_EXT_ERRORS then
    begin
        DoSimpleMsg(DSS, _('No active circuit element found! Activate one and retry.'), 97800);
    end;
    if NeedsPCElement and ((elem.DSSObjType and BASECLASSMASK) <> PC_ELEMENT) then
    begin
        if DSS_CAPI_EXT_ERRORS then
            DoSimpleMsg(DSS, _('The active circuit element is not a PC Element'), 100004);
        Result := True;
        Exit;
    end;
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_BusNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    Result: PPAnsiCharArray0;
    i: Integer;
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;

    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, elem.Nterms);
    for i := 1 to elem.Nterms do
        Result[i - 1] := DSS_CopyStringAsPChar(elem.GetBus(i));

end;

procedure CktElement_Get_BusNames_GR(); CDECL;
// Same as CktElement_Get_BusNames but uses global result (GR) pointers
begin
    CktElement_Get_BusNames(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;

//------------------------------------------------------------------------------
function CktElement_Get_Name(): PAnsiChar; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := NIL;
    if InvalidCktElement(DSSPrime, elem) then
        Exit;
